# meeting_calendar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  conflicts.py  crud.py  db.py  main.py  models.py  schemas.py
app/routers/: employees.py  meetings.py
openspec/changes/archive/2026-07-08-build-meeting-scheduler/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-build-meeting-scheduler/specs/employee-directory/: spec.md
openspec/changes/archive/2026-07-08-build-meeting-scheduler/specs/meeting-scheduling/: spec.md
openspec/changes/archive/2026-07-08-build-meeting-scheduler/specs/schedule-viewing/: spec.md
openspec/specs/employee-directory/: spec.md
openspec/specs/meeting-scheduling/: spec.md
openspec/specs/schedule-viewing/: spec.md
tests/: conftest.py  test_conflicts.py  test_meetings.py
ui/: app.py
