[project]
name = "meeting-calendar"
version = "1.0.0"
description = "Календарь встреч"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py314"
extend-exclude = ["openspec"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
exclude = ['^\.venv/', '^openspec/']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
